2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/26_FOr.deca
// Description:
//    tests de programme incorrect syntaxiquement ,Or incorrecte car membre gauche n'est pas and_expr
//
// Resultats:
//    ligne 12 : Erreur, mismatched input '*'
//
// Historique:
//    cree le 09/01/2024
{
    boolean x =true;
    x = false;
    x = x || *; 
}